--- a/index.qmd
+++ b/index.qmd
@@ -28,7 +28,7 @@ library(plotly)
 library(rayshader)
 ```
 
-::::::::: panel-tabset
+:::::::::: panel-tabset
 ## Preparation
 
 ### Lesson Narrative
@@ -330,15 +330,23 @@ Using a matrix to represent temperature data makes it easier to analyze and spot
 
 ### From Matrix to 3D Visualization
 
-This is lesson 2.
+Let's turn matrices into 3D models!
 
 ## Lesson 3
 
 ### Modeling the World: Topography with Matrices
 
-Hi, this is lesson 3!
+Let's bring matrices to life with 3D printing!
+
+::: {.callout-note icon="false"}
+## Notice and Wonder
+
+![Image: konsepsi.wordpress.com](merapi_model_1.jpg)
+
+What do you notice? What do you wonder?
+:::
 
 ## Practice
 
 Hello!
-:::::::::
+::::::::::
