--- a/index.qmd
+++ b/index.qmd
@@ -412,7 +412,9 @@ save_3dprint(
 )
 ```
 
-Can you explain what each step of the code does?
+1.  Can you explain what each step of the code does?
+
+2.  What do you think the result of the code will look like? You can download the resulting STL file [here](https://github.com/ydkristanto/advanced-3d-printing-jku/blob/main/merapi_3d.stl){target="_blank"}. To view it, you can use an STL viewer, such as [viewstl.com](https://www.viewstl.com/){target="_blank"}.
 :::
 
 ## Practice
