--- a/index.qmd
+++ b/index.qmd
@@ -10,7 +10,7 @@ author:
 date: 2024/11/25
 lightbox: true
 format:
-  html:
+  live-html:
     toc: true
     anchor-sections: true
     smooth-scroll: true
@@ -22,6 +22,8 @@ editor_options:
   chunk_output_type: console
 ---
 
+{{< include ./_extensions/r-wasm/live/_knitr.qmd >}}
+
 ```{r}
 #| message: false
 
@@ -30,7 +32,7 @@ library(plotly)
 library(rayshader)
 ```
 
-::::::::::::: panel-tabset
+::::::::::::::::::: panel-tabset
 ## Preparation
 
 ### Lesson Narrative
@@ -334,6 +336,81 @@ Using a matrix to represent temperature data makes it easier to analyze and spot
 
 Let's turn matrices into 3D models!
 
+:::::: {.callout-note icon="false"}
+## Notice and Wonder
+
+::::: {.row layout="[1, 1]"}
+::: column
+``` r
+matrix_example <- matrix(
+  data = c(5, 3, 1, 7, 4, 10),
+  nrow = 3,
+  byrow = TRUE
+)
+
+heatmap(
+  x = matrix_example,
+  Rowv = NA,
+  Colv = NA,
+  scale = "none"
+)
+```
+:::
+
+::: column
+```{r}
+matrix_example <- matrix(
+  data = c(5, 3, 1, 7, 4, 10),
+  nrow = 3,
+  byrow = TRUE
+)
+
+heatmap(
+  x = matrix_example,
+  Rowv = NA,
+  Colv = NA,
+  scale = "none"
+)
+```
+:::
+:::::
+
+What do you notice? What do you wonder?
+::::::
+
+::: {.callout-note icon="false"}
+## Exploring Matrices and Visualizing with Heatmaps
+
+Use the interactive code block below to create a matrix called `matrix_example_2`. Modify the values in the `data`, `nrow`, and `byrow` (TRUE or FALSE) arguments to explore their meanings. Click the "Run Code" button to see the results. Based on your exploration, what do you think each of these arguments does?
+
+```{webr}
+matrix_example_2 <- matrix(
+  data = c(6, 2, 4, 5, 6, 1, 3, 2),
+  nrow = 4,
+  byrow = TRUE
+)
+
+print(matrix_example_2)
+```
+
+Once you've created your matrix, use the code block below to generate a heatmap of `matrix_example_2`.
+
+```{webr}
+heatmap(
+  x = matrix_example_2,
+  Rowv = NA,
+  Colv = NA,
+  scale = "none"
+)
+```
+
+Observe how the matrix values are represented in the heatmap. Experiment by changing the matrix values and regenerating the heatmap to see how it changes.
+:::
+
+::: {.callout-note icon="false"}
+## Visualizing Real Data
+:::
+
 ## Lesson 3
 
 ### Modeling the World: Topography with Matrices
@@ -421,4 +498,4 @@ save_3dprint(
 ## Practice
 
 Hello!
-:::::::::::::
+:::::::::::::::::::
